test/Harper/Tests/Good/issue007_ass2.har
fun :: Integer -> Integer;
fun n = {
  var (y :: Integer) = n;
  var (n :: Integer) = n;
  n *= 2;
  return n;
};

main :: Integer;
main = fun 42;