test/Harper/Tests/Bad/issue025_thisDataOutsideOfType.har
main :: Integer;
main = {
    this.data.a := 42;
    return this.data.a;
};